// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > discrete sliders > should allow for marks to have custom labels 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
>
  <span
    class="rmd-slider-track rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1"
      id="slider-_r_1d_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_1d_-value"
      max="100"
      min="0"
      step="10"
      tabindex="-1"
      type="range"
      value="50"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-0"
      style="--rmd-slider-mark-offset: 0%;"
    />
    <span
      class="rmd-typography rmd-typography--body-2 rmd-slider-mark-label rmd-slider-mark-label--h"
      style="--rmd-slider-mark-offset: 0%;"
    >
      First
    </span>
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-20"
      style="--rmd-slider-mark-offset: 20%;"
    />
    <span
      class="rmd-typography rmd-typography--body-2 rmd-slider-mark-label rmd-slider-mark-label--h"
      style="--rmd-slider-mark-offset: 20%;"
    >
      Second
    </span>
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-50"
      style="--rmd-slider-mark-offset: 50%;"
    />
    <span
      class="rmd-typography rmd-typography--body-2 rmd-slider-mark-label rmd-slider-mark-label--h"
      style="--rmd-slider-mark-offset: 50%;"
    >
      Third
    </span>
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-100"
      style="--rmd-slider-mark-offset: 100%;"
    />
    <span
      class="rmd-typography rmd-typography--body-2 rmd-slider-mark-label rmd-slider-mark-label--h"
      style="--rmd-slider-mark-offset: 100%;"
    >
      Fourth
    </span>
  </span>
</div>
`;

exports[`Slider > discrete sliders > should support manually defining the marks using a list 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
>
  <span
    class="rmd-slider-track rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1"
      id="slider-_r_1c_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_1c_-value"
      max="100"
      min="0"
      step="10"
      tabindex="-1"
      type="range"
      value="50"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-0"
      style="--rmd-slider-mark-offset: 0%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-20"
      style="--rmd-slider-mark-offset: 20%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-50"
      style="--rmd-slider-mark-offset: 50%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-100"
      style="--rmd-slider-mark-offset: 100%;"
    />
  </span>
</div>
`;

exports[`Slider > discrete sliders > should support rendering a tooltip while focused or dragging by enabling the discrete prop 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--dense rmd-tooltip--above rmd-nowrap rmd-slider-tooltip rmd-slider-tooltip--h rmd-slider-thumb--animate rmd-slider-thumb--h1"
  id="tooltip-_r_v_"
  role="tooltip"
>
  50
</span>
`;

exports[`Slider > discrete sliders > should support rendering a tooltip while focused or dragging by enabling the discrete prop 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--dense rmd-tooltip--above rmd-nowrap rmd-slider-tooltip rmd-slider-tooltip--h rmd-slider-thumb--animate rmd-slider-thumb--h1"
  id="tooltip-_r_v_"
  role="tooltip"
>
  60
</span>
`;

exports[`Slider > discrete sliders > should support rendering a tooltip while focused or dragging by enabling the discrete prop for range sliders 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--dense rmd-tooltip--above rmd-nowrap rmd-slider-tooltip rmd-slider-tooltip--h rmd-slider-thumb--animate rmd-slider-thumb--h1"
  id="tooltip-_r_15_"
  role="tooltip"
>
  0
</span>
`;

exports[`Slider > discrete sliders > should support rendering a tooltip while focused or dragging by enabling the discrete prop for range sliders 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--dense rmd-tooltip--above rmd-nowrap rmd-slider-tooltip rmd-slider-tooltip--h rmd-slider-thumb--animate rmd-slider-thumb--h1"
  id="tooltip-_r_15_"
  role="tooltip"
>
  10
</span>
`;

exports[`Slider > discrete sliders > should support rendering a tooltip while focused or dragging by enabling the discrete prop for range sliders 3`] = `
<span
  class="rmd-tooltip rmd-tooltip--dense rmd-tooltip--above rmd-nowrap rmd-slider-tooltip rmd-slider-tooltip--h rmd-slider-thumb--animate rmd-slider-thumb--h2"
  id="tooltip-_r_16_"
  role="tooltip"
>
  100
</span>
`;

exports[`Slider > discrete sliders > should support rendering marks at each step on the slider 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
>
  <span
    class="rmd-slider-track rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1"
      id="slider-_r_1a_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_1a_-value"
      max="100"
      min="0"
      step="10"
      tabindex="-1"
      type="range"
      value="50"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-0"
      style="--rmd-slider-mark-offset: 0%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-10"
      style="--rmd-slider-mark-offset: 10%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-20"
      style="--rmd-slider-mark-offset: 20%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-30"
      style="--rmd-slider-mark-offset: 30%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--active rmd-slider-mark--h"
      data-testid="mark-40"
      style="--rmd-slider-mark-offset: 40%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-50"
      style="--rmd-slider-mark-offset: 50%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-60"
      style="--rmd-slider-mark-offset: 60%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-70"
      style="--rmd-slider-mark-offset: 70%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-80"
      style="--rmd-slider-mark-offset: 80%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-90"
      style="--rmd-slider-mark-offset: 90%;"
    />
    <span
      class="rmd-slider-mark rmd-slider-mark--inactive rmd-slider-mark--h"
      data-testid="mark-100"
      style="--rmd-slider-mark-offset: 100%;"
    />
  </span>
</div>
`;

exports[`Slider > range slider > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
    style="--rmd-slider-offset-1: 0%; --rmd-slider-offset-2: 100%;"
  >
    <span
      aria-label="Min"
      aria-valuemax="99"
      aria-valuemin="0"
      aria-valuenow="0"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_c_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Min"
      class="rmd-slider-thumb__input"
      id="slider-_r_c_-value"
      max="99"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="0"
    />
    <span
      aria-label="Max"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="100"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
      id="slider-_r_c_-2"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Max"
      class="rmd-slider-thumb__input"
      id="slider-_r_c_-2-value"
      max="100"
      min="1"
      step="1"
      tabindex="-1"
      type="range"
      value="100"
    />
  </span>
</div>
`;

exports[`Slider > range slider > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right custom-class-name"
  style="color: white;"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_d_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_d_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;

exports[`Slider > range slider > should support a disabled state 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  data-testid="container"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--disabled rmd-slider-track--h rmd-slider-track--h2"
    style="--rmd-slider-offset-1: 0%; --rmd-slider-offset-2: 100%;"
  >
    <span
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--mask rmd-slider-thumb--mask-h rmd-slider-thumb--animate rmd-slider-thumb--disabled"
    />
    <span
      aria-disabled="true"
      aria-label="Min"
      aria-valuemax="99"
      aria-valuemin="0"
      aria-valuenow="0"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-h"
      id="slider-_r_e_"
      role="slider"
      tabindex="-1"
    />
    <input
      aria-hidden="true"
      aria-label="Min"
      class="rmd-slider-thumb__input"
      disabled=""
      id="slider-_r_e_-value"
      max="99"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="0"
    />
    <span
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--mask rmd-slider-thumb--mask-h rmd-slider-thumb--animate rmd-slider-thumb--disabled"
    />
    <span
      aria-disabled="true"
      aria-label="Max"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="100"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-h"
      id="slider-_r_e_-2"
      role="slider"
      tabindex="-1"
    />
    <input
      aria-hidden="true"
      aria-label="Max"
      class="rmd-slider-thumb__input"
      disabled=""
      id="slider-_r_e_-2-value"
      max="100"
      min="1"
      step="1"
      tabindex="-1"
      type="range"
      value="100"
    />
  </span>
</div>
`;

exports[`Slider > single thumb slider > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_0_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_0_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;

exports[`Slider > single thumb slider > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right custom-class-name"
  style="color: white;"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_0_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_0_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h"
  data-testid="container"
>
  <span
    data-testid="before"
  />
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
  After!
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 2`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left"
  data-testid="container"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
  After!
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 3`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-right"
  data-testid="container"
>
  <span
    data-testid="before"
  />
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 4`] = `
<div
  class="rmd-slider-container rmd-slider-container--v"
  data-testid="container"
>
  <span
    data-testid="before"
  />
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-orientation="vertical"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
  After!
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 5`] = `
<div
  class="rmd-slider-container rmd-slider-container--v rmd-slider-container--pad-bottom"
  data-testid="container"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-orientation="vertical"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
  After!
</div>
`;

exports[`Slider > single thumb slider > should be able to render addons before and after the slider 6`] = `
<div
  class="rmd-slider-container rmd-slider-container--v rmd-slider-container--pad-top"
  data-testid="container"
>
  <span
    data-testid="before"
  />
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      aria-label="Slider"
      aria-orientation="vertical"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
      id="slider-_r_2_"
      role="slider"
      tabindex="0"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      id="slider-_r_2_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;

exports[`Slider > single thumb slider > should support a disabled state 1`] = `
<div
  class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  data-testid="container"
>
  <span
    class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--disabled rmd-slider-track--h rmd-slider-track--h1"
    style="--rmd-slider-offset-1: 50%;"
  >
    <span
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--mask rmd-slider-thumb--mask-h rmd-slider-thumb--animate rmd-slider-thumb--disabled"
    />
    <span
      aria-disabled="true"
      aria-label="Slider"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-h"
      id="slider-_r_1_"
      role="slider"
      tabindex="-1"
    />
    <input
      aria-hidden="true"
      aria-label="Slider"
      class="rmd-slider-thumb__input"
      disabled=""
      id="slider-_r_1_-value"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value="50"
    />
  </span>
</div>
`;
